--- a/res/drawable/horse_anim.xml
+++ b/res/drawable/horse_anim.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/horse_1" android:duration="200" />
-    <item android:drawable="@drawable/horse_2" android:duration="200" />
+    <item android:drawable="@drawable/bg_01" android:duration="200" />
+    <item android:drawable="@drawable/bg_02" android:duration="200" />
+    <item android:drawable="@drawable/bg_03" android:duration="200" />
+    <item android:drawable="@drawable/bg_04" android:duration="200" />
+    <item android:drawable="@drawable/bg_05" android:duration="200" />
 </animation-list>
