--- a/res/layout/primary_category_grid_view_item.xml
+++ b/res/layout/primary_category_grid_view_item.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    >
 
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
-    
+        android:layout_weight="1"
+        >
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="@dimen/x14"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/x10"
-            android:layout_gravity="center_horizontal">
+            android:layout_marginTop="@dimen/x14"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:id="@+id/iv_primary_category_icon"
                 android:layout_width="@dimen/x30"
                 android:layout_height="@dimen/x30"
+                android:contentDescription="icon"
                 android:scaleType="centerCrop"
-                android:contentDescription="icon"/>
+                />
 
             <TextView
                 android:id="@+id/tv_primary_category_name"
@@ -31,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/x8"
                 android:textColor="@color/color_3"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                />
 
         </LinearLayout>
 
@@ -40,9 +45,10 @@
             android:id="@+id/top_line"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/common_gray_line"
             android:layout_gravity="top"
-            android:visibility="gone"/>
+            android:background="@color/common_gray_line"
+            android:visibility="gone"
+            />
 
     </FrameLayout>
 
@@ -51,6 +57,7 @@
         android:layout_width="1px"
         android:layout_height="match_parent"
         android:background="@color/common_gray_line"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 
 </LinearLayout>
