--- a/source/kdelivery/res/values/colors.xml
+++ b/source/kdelivery/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="orange_home">#ff9a01</color>
+    <color name="orange_home">#FF5959</color>
 </resources>
